# default-model

./: .gitignore  README.md  feature_importance.csv  optuna_study_xgboost.db  pyproject.toml
docs/: timeline.md
mlruns/0/: meta.yaml
mlruns/0/d3083937a3fe4b2f96c4ba06b9dde770/: meta.yaml
mlruns/0/d3083937a3fe4b2f96c4ba06b9dde770/metrics/: lgbm_oof_brier
mlruns/0/d3083937a3fe4b2f96c4ba06b9dde770/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
notebooks/: eda.ipynb
optuna/: data_profile_summary.csv  trials.csv
optuna/lightgbm/: feature_importance.csv  summary.csv  trials.csv
optuna/lightgbm/calibration/: lgbm_oof_calibration_table.csv
optuna/xgboost/: optuna_trials_xgb.csv
optuna/xgboost/calibration/: xgb_oof_brier.txt  xgb_oof_calibration_table.csv
reports/lightgbm/: missingness.csv  optuna_best.json
reports/lightgbm/calibration/: brier_isotonic.txt
reports/xgboost/: feature_importance_xgb.csv
reports/xgboost/calibration/: brier_isotonic.txt
src/credit_risk/: clean.py  feat_eng.py  orchestrator.py  splits.py
src/credit_risk/features/: clean.py  feat_eng.py  orchestrator.py
src/credit_risk/models/: tabnet_baseline.py  train_best.py
src/credit_risk/tests/: conftest.py
src/credit_risk/utils/: calibrate_oof.py  eval_metrics.py  optuna_common.py  optuna_metrics.py  optuna_metrics_lgbm.py  optuna_metrics_xgb.py  shap_reports.py
src/models/: lightgbm_baseline.py  tabnet_baseline.py  xgboost_baseline.py
src/models/lightgbm/: lightgbm_optuna.py
src/tests/: conftest.py  test_clean.py
(+11 files in other folders)
