[project]
name = "credit_risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "shap>=0.48.0",
    "xgboost>=3.0.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.setuptools]
packages = ["credit_risk"]
package-dir = {"" = "src"}
